--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
 	<div class="swiper-container">
 	    <div class="swiper-wrapper">
 	        <div class="swiper-slide">
-	        	<img src="../images/启动页1.png" height="1334" width="750">
+	        	<img src="./images/启动页1.png" height="1334" width="750">
 	        </div>
 	        <div class="swiper-slide">
-	        	<img src="../images/启动页2.jpg" height="1334" width="750">
+	        	<img src="./images/启动页2.jpg" height="1334" width="750">
 	        </div>
 	        <div class="swiper-slide">
-	        	<img src="../images/启动页3.png" height="1334" width="750">
+	        	<img src="./images/启动页3.png" height="1334" width="750">
 	        	<div class="jinru"><a href="../index/index.html">立即进入</a></div>
 	        </div>
 	    </div>
