--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>FOX</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-	<link rel="stylesheet" type="text/css" href="../swiper.min.css">
+	<link rel="stylesheet" type="text/css" href="./swiper.min.css">
 	<style type="text/css">
 		* {
 			margin: 0;
@@ -83,7 +83,7 @@
 	        </div>
 	        <div class="swiper-slide">
 	        	<img src="./images/启动页3.png" height="1334" width="750">
-	        	<div class="jinru"><a href="../index/index.html">立即进入</a></div>
+	        	<div class="jinru"><a href="./index/index.html">立即进入</a></div>
 	        </div>
 	    </div>
     <!-- 如果需要分页器 -->
@@ -91,7 +91,7 @@
 	</div>
 </body>
 </html>
-<script type="text/javascript" src="../swiper.min.js"></script>
+<script type="text/javascript" src="./swiper.min.js"></script>
 <script>         
   var mySwiper = new Swiper ('.swiper-container', {
     // direction: 'vertical',
